--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -268,6 +268,7 @@ label.host                        = Amfitri\u00F3:
 label.lastaccess                  = Last access Moodle
 label.lastcourseaccess            = Last Course access 
 label.lastupdate                  = \u00DAltima actualitzaci\u00F3 local:
+label.launcherconfiguration       = Application launcher configuration
 label.loadingActivitiesCompletion = Desc\u00E0rrega d'Activitat de finalitzaci\u00F3 per a cada usuari...
 label.loadingcoursedata           = Downloading course data.
 label.loadingqualifier            = Generant el qualificador del curs ... (Aquest proc\u00E9s pot trigar una mica de temps)
@@ -283,7 +284,7 @@ label.parselog                    = Parsing logs...
 label.participants                = Participants
 label.pass                        = Contrasenya:
 label.relogin                     = Failed to download logs. Trying to log in again and download again.
-label.restartapplication          = Need to restart the application for the changes to take effect
+label.restartapplication          = A restart of the application is necessary for the changes to take effect
 label.restoreversion              = Restore to version:
 label.rol                         = Rol:
 label.roles                       = Roles
