--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -268,6 +268,7 @@ label.host                        = Host:
 label.lastaccess                  = \u00DAltimo acceso Moodle
 label.lastcourseaccess            = \u00DAltimo acceso Curso
 label.lastupdate                  = \u00DAltima actualizaci\u00F3n local:
+label.launcherconfiguration       = Configuraci\u00F3n de la aplicaci\u00F3n del lanzador
 label.loadingActivitiesCompletion = Descarga de Actividad de finalizaci\u00F3n para cada usuario...
 label.loadingcoursedata           = Descargando los datos del curso.
 label.loadingqualifier            = Generando el calificador del curso... (Este proceso puede tardar unos segundos)
