--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -268,6 +268,7 @@ label.host                        = Hospedeiro:
 label.lastaccess                  = Last access Moodle
 label.lastcourseaccess            = Last Course access 
 label.lastupdate                  = \u00DAltima atualiza\u00E7\u00E3o local:
+label.launcherconfiguration       = Application launcher configuration
 label.loadingActivitiesCompletion = Baixando Atividade Conclus\u00E3o para cada usu\u00E1rio...
 label.loadingcoursedata           = Downloading course data.
 label.loadingqualifier            = Gerando qualificador do curso ... (Esse processo pode levar algum tempo)
@@ -283,7 +284,7 @@ label.parselog                    = Parsing logs...
 label.participants                = Participantes
 label.pass                        = Senha:
 label.relogin                     = Failed to download logs. Trying to log in again and download again.
-label.restartapplication          = Need to restart the application for the changes to take effect
+label.restartapplication          = A restart of the application is necessary for the changes to take effect
 label.restoreversion              = Restore to version:
 label.rol                         = Rol:
 label.roles                       = Roles
