--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -268,6 +268,7 @@ label.host                        = Wirt:
 label.lastaccess                  = Last access Moodle
 label.lastcourseaccess            = Last Course access 
 label.lastupdate                  = Letzte lokale Aktualisierung:
+label.launcherconfiguration       = Application launcher configuration
 label.loadingActivitiesCompletion = Das Herunterladen Aktivit\u00E4t Abschluss f\u00FCr jeden Benutzer...
 label.loadingcoursedata           = Downloading course data.
 label.loadingqualifier            = Kursqualifikator wird generiert ... (Dieser Vorgang kann einige Zeit dauern.)
@@ -283,7 +284,7 @@ label.parselog                    = Parsing logs...
 label.participants                = Teilnehmer
 label.pass                        = Passwort:
 label.relogin                     = Failed to download logs. Trying to log in again and download again.
-label.restartapplication          = Need to restart the application for the changes to take effect
+label.restartapplication          = A restart of the application is necessary for the changes to take effect
 label.restoreversion              = Restore to version:
 label.rol                         = Rol:
 label.roles                       = Roles
