--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -268,6 +268,7 @@ label.host                        = Host:
 label.lastaccess                  = Last access Moodle
 label.lastcourseaccess            = Last Course access 
 label.lastupdate                  = Last local update:
+label.launcherconfiguration       = Application launcher configuration
 label.loadingActivitiesCompletion = Downloading Activity Completion for each user...
 label.loadingcoursedata           = Downloading course data.
 label.loadingqualifier            = Generating course gradebook... (This process may take some time)
@@ -283,7 +284,7 @@ label.parselog                    = Parsing logs...
 label.participants                = Participants
 label.pass                        = Password:
 label.relogin                     = Failed to download logs. Trying to log in again and download again.
-label.restartapplication          = Need to Need to restart the application for the changes to take effect
+label.restartapplication          = A restart of the application is necessary for the changes to take effect
 label.restoreversion              = Restore to version:
 label.rol                         = Rol:
 label.roles                       = Roles
