--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -268,6 +268,7 @@ label.host                        = H\u00F4te:
 label.lastaccess                  = Last access Moodle
 label.lastcourseaccess            = Last Course access 
 label.lastupdate                  = Derni\u00E8re mise \u00E0 jour locale:
+label.launcherconfiguration       = Application launcher configuration
 label.loadingActivitiesCompletion = T\u00E9l\u00E9chargement Activit\u00E9 ach\u00E8vement pour chaque utilisateur...
 label.loadingcoursedata           = Downloading course data.
 label.loadingqualifier            = G\u00E9n\u00E9ration du qualificatif de cours ... (Ce processus peut prendre un certain temps)
@@ -283,7 +284,7 @@ label.parselog                    = Parsing logs...
 label.participants                = Participants
 label.pass                        = Mot de passe:
 label.relogin                     = Failed to download logs. Trying to log in again and download again.
-label.restartapplication          = Need to restart the application for the changes to take effect
+label.restartapplication          = A restart of the application is necessary for the changes to take effect
 label.restoreversion              = Restore to version:
 label.rol                         = Rol:
 label.roles                       = Roles
