--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -268,6 +268,7 @@ label.host                        = Ospite:
 label.lastaccess                  = Last access Moodle
 label.lastcourseaccess            = Last Course access 
 label.lastupdate                  = Ultimo aggiornamento locale:
+label.launcherconfiguration       = Application launcher configuration
 label.loadingActivitiesCompletion = Il download di attivit\u00E0 di completamento per ogni utente...
 label.loadingcoursedata           = Downloading course data.
 label.loadingqualifier            = Generazione del qualificatore del corso ... (Questo processo potrebbe richiedere del tempo)
@@ -283,7 +284,7 @@ label.parselog                    = Parsing logs...
 label.participants                = partecipanti
 label.pass                        = La password:
 label.relogin                     = Failed to download logs. Trying to log in again and download again.
-label.restartapplication          = Need to restart the application for the changes to take effect
+label.restartapplication          = A restart of the application is necessary for the changes to take effect
 label.restoreversion              = Restore to version:
 label.rol                         = Rol:
 label.roles                       = Roles
