Fixed dialog on export CSV menu

--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -800,6 +800,7 @@ message.export_csv            = Exportaci\u00F3 CSV amb \u00E8xit. Revisi el fit
 message.export_csv_desglossed = Exportaci\u00F3 CSV amb \u00E8xit. Revisi el fitxer: 
 message.export_csv_success    = Exportaci\u00F3 CSV amb \u00E8xit. Revisi els fitxers del directori: 
 message.export_png            = Exportaci\u00F3 PNG amb \u00E8xit. Revisi els fitxers: 
+message.exportdir             = Exportaci\u00F3 amb \u00E8xit. Revisi el fitxer del directori: 
 
 module.assign       = Assignaci\u00F3
 module.book         = Llibre
