--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -800,6 +800,7 @@ message.export_csv            = Export CSV avec succ\u00E8s. Passez en revue les
 message.export_csv_desglossed = Export CSV avec succ\u00E8s. Passez en revue les fichiers: 
 message.export_csv_success    = Export CSV avec succ\u00E8s. Passez en revue les fichiers du r\u00E9pertoire: 
 message.export_png            = Export PNG avec succ\u00E8s. Passez en revue les fichiers du r\u00E9pertoire: 
+message.exportdir             = Export avec succ\u00E8s. Passez en revue les fichiers du r\u00E9pertoire: 
 
 module.assign       = Affectation
 module.book         = Livre
