--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -800,6 +800,7 @@ message.export_csv            = Esportazione CSV con successo. Esaminare i file 
 message.export_csv_desglossed = Esportazione CSV con successo. Esaminare i file: 
 message.export_csv_success    = Esportazione CSV con successo. Esaminare i file nella directory: 
 message.export_png            = Esportazione PNG con successo. Esaminare i file nella directory: 
+message.exportdir             = Esportazione con successo. Esaminare i file nella directory: 
 
 module.assign       = assegnazione
 module.book         = Libro
