--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -800,6 +800,7 @@ message.export_csv            = Exporta\u00E7\u00E3o CSV com sucesso. Revise os 
 message.export_csv_desglossed = Exporta\u00E7\u00E3o CSV com sucesso. Revise os arquivos no diret\u00F3rio: 
 message.export_csv_success    = Exporta\u00E7\u00E3o CSV com sucesso. Revise os arquivos no diret\u00F3rio: 
 message.export_png            = Exporta\u00E7\u00E3o PNG com sucesso. Revise os arquivos no diret\u00F3rio: 
+message.exportdir             = Exporta\u00E7\u00E3o com sucesso. Revise os arquivos no diret\u00F3rio: 
 
 module.assign       = Tarefa
 module.book         = Livro
