--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -800,6 +800,7 @@ message.export_csv            = CSV-Export erfolgreich. \u00DCberpr\u00FCfen Sie
 message.export_csv_desglossed = CSV-Export erfolgreich. \u00DCberpr\u00FCfen Sie die Dateien im Verzeichnis: 
 message.export_csv_success    = CSV-Export erfolgreich. \u00DCberpr\u00FCfen Sie die Dateien im Verzeichnis: 
 message.export_png            = PNG-Export erfolgreich. \u00DCberpr\u00FCfen Sie die Dateien im Verzeichnis: 
+message.exportdir             = Export erfolgreich. \u00DCberpr\u00FCfen Sie die Dateien im Verzeichnis: 
 
 module.assign       = Zuordnung
 module.book         = Buch
