Close dialog on click the explorer file

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -795,12 +795,12 @@ menu.update              = _Update course
 menu.usermanual          = U_ser's guide
 menu.view                = _View
 
-message.export                = Export successfully. Review the directory: 
+message.export                = Export successfully. Review the file: 
 message.export_csv            = CSV export successfully. Review the file: 
 message.export_csv_desglossed = CSV breakdown export successfully. Review the file: 
 message.export_csv_success    = CSV export successfully. Review the files in the directory: 
 message.export_png            = PNG export successfully. Review the file: 
-message.exportdir             = Export successfully. Review the file: 
+message.exportdir             = Export successfully. Review the directory: 
 
 module.assign       = Assignment
 module.book         = Book
