--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -795,12 +795,12 @@ menu.update              = Actua_lizar curso
 menu.usermanual          = Ma_nual de usuario
 menu.view                = _Ver
 
-message.export                = Exportaci\u00F3n con \u00E9xito. Revise la carpeta: 
+message.export                = Exportaci\u00F3n con \u00E9xito. Revise el fichero: 
 message.export_csv            = Exportaci\u00F3n CSV con \u00E9xito. Revise el fichero: 
 message.export_csv_desglossed = Exportaci\u00F3n CSV desglosado con \u00E9xito. Revise el ficlero: 
 message.export_csv_success    = Exportaci\u00F3n CSV con \u00E9xito. Revise los ficheros en el directorio: 
 message.export_png            = Exportaci\u00F3n PNG con \u00E9xito. Revise el fichero: 
-message.exportdir             = Exportaci\u00F3n con \u00E9xito. Revise el fichero: 
+message.exportdir             = Exportaci\u00F3n con \u00E9xito. Revise la carpeta: 
 
 module.assign       = Tarea
 module.book         = Libro
