Cambios en los mensajes

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -171,6 +171,8 @@ clustering.type.logs.event               = Event
 clustering.type.logs.section             = Section
 clustering.value                         = Value
 
+confirmation = Confirmation
+
 cutGrade = Grade to pass
 
 displayXScaleTitle = Title X-axis
@@ -217,6 +219,8 @@ header.passwordDateTime         = Previous date password:
 header.passwordIncorrectMessage = Password incorrect
 
 horizontalMode = Horizontal mode
+
+information = Information
 
 initialGroups = Initial Groups
 
