--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -171,6 +171,8 @@ clustering.type.logs.event               = Evento
 clustering.type.logs.section             = Secci\u00F3n
 clustering.value                         = Valor
 
+confirmation = Confirmaci\u00F3n
+
 cutGrade = Nota de corte
 
 displayXScaleTitle = T\u00EDtulo del eje X
@@ -217,6 +219,8 @@ header.passwordDateTime         = Fecha de la contrase\u00F1a antigua:
 header.passwordIncorrectMessage = Contrase\u00F1a incorrecta
 
 horizontalMode = Modo horizontal
+
+information = Informaci\u00F3n
 
 initialGroups = Grupos iniciales
 
