--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -19,7 +19,7 @@ BUBBLE = Compromiso (Lineal)
 
 BUBBLE.limitDays              = L\u00EDmite m\u00E1ximo
 BUBBLE.xAxisTitle             = D\u00EDas transcurridos del \u00FAltimo acceso al Curso hasta {0}
-BUBBLE.yAxisTitle             = D\u00EDas transcurridos del \u00FAltimo acceso a MoodleS hasta {0}
+BUBBLE.yAxisTitle             = D\u00EDas transcurridos del \u00FAltimo acceso a Moodle hasta {0}
 
 BUBBLE_LOGARITHMIC = Compromiso (Log.)
 
