Fixed bug in hidding charts in risk tab

--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -81,8 +81,9 @@ SCATTER_USER = Users scatter
 
 SESSION = Session
 
-SESSION.xAxisTitle = {0}
-SESSION.yAxisTitle = Minutes (interval limit: {0})
+SESSION.timeInterval = Maximum minute interval
+SESSION.xAxisTitle   = {0}
+SESSION.yAxisTitle   = Minutes (interval limit: {0})
 
 STACKED_BAR = Bar Empil\u00E9e
 
