--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -81,8 +81,9 @@ SCATTER_USER = Dispersi\u00F3n de usuarios
 
 SESSION = Sesi\u00F3n
 
-SESSION.xAxisTitle = {0}
-SESSION.yAxisTitle = Minutos (l\u00EDmite intervalo: {0})
+SESSION.timeInterval = Intervalo maximo de minutos
+SESSION.xAxisTitle   = {0}
+SESSION.yAxisTitle   = Minutos (l\u00EDmite intervalo: {0})
 
 STACKED_BAR = Barras Apiladas
 
