Bug fixed when has not data in tables

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -803,34 +803,35 @@ message.export_csv_success    = CSV export successfully. Review the files in the
 message.export_png            = PNG export successfully. Review the file: 
 message.exportdir             = Export successfully. Review the directory: 
 
-module.assign       = Assignment
-module.book         = Book
-module.category     = Category
-module.chat         = Chat
-module.choice       = Choice
-module.data         = Database
-module.feedback     = Feedback
-module.folder       = Folder
-module.forum        = Forum
-module.glossary     = Glossary
-module.guiadocente  = Teaching guide
-module.imscp        = IMS content package
-module.kalvidassign = Kaltura Media Assignment
-module.kalvidres    = Kaltura Video Resource
-module.label        = Label
-module.lesson       = Lesson
-module.lti          = External tool
-module.manual       = Manual item
-module.module       = Not avaible
-module.page         = Page
-module.quiz         = Quiz
-module.resource     = File
-module.scorm        = SCORM package
-module.survey       = Survey
-module.tab          = Tab display
-module.url          = URL
-module.wiki         = Wiki
-module.workshop     = Workshop
+module.assign          = Assignment
+module.book            = Book
+module.category        = Category
+module.chat            = Chat
+module.choice          = Choice
+module.data            = Database
+module.feedback        = Feedback
+module.folder          = Folder
+module.forum           = Forum
+module.glossary        = Glossary
+module.guiadocente     = Teaching guide
+module.imscp           = IMS content package
+module.kalvidassign    = Kaltura Media Assignment
+module.kalvidres       = Kaltura Video Resource
+module.label           = Label
+module.lesson          = Lesson
+module.lti             = External tool
+module.manual          = Manual item
+module.module          = Not avaible
+module.page            = Page
+module.quiz            = Quiz
+module.resource        = File
+module.scorm           = SCORM package
+module.survey          = Survey
+module.tab             = Tab display
+module.turnitintooltwo = Turnintin 2
+module.url             = URL
+module.wiki            = Wiki
+module.workshop        = Workshop
 
 moreMax = Maximum
 
