--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -803,34 +803,35 @@ message.export_csv_success    = Exportaci\u00F3n CSV con \u00E9xito. Revise los 
 message.export_png            = Exportaci\u00F3n PNG con \u00E9xito. Revise el fichero: 
 message.exportdir             = Exportaci\u00F3n con \u00E9xito. Revise la carpeta: 
 
-module.assign       = Tarea
-module.book         = Libro
-module.category     = Categor\u00EDa
-module.chat         = Chat
-module.choice       = Consulta
-module.data         = Base de datos
-module.feedback     = Encuesta
-module.folder       = Carpeta
-module.forum        = Foro
-module.glossary     = Glosario
-module.guiadocente  = Gu\u00EDa docente
-module.imscp        = Paquete de contenido IMS
-module.kalvidassign = Kaltura Media Assignment
-module.kalvidres    = Kaltura Video Resource
-module.label        = Etiqueta
-module.lesson       = Lecci\u00F3n
-module.lti          = Herramienta externa
-module.manual       = \u00CDtem manual
-module.module       = No disponible
-module.page         = P\u00E1gina
-module.quiz         = Cuestionario
-module.resource     = Archivo
-module.scorm        = Paquete SCORM
-module.survey       = Encuestas predefinidas
-module.tab          = Pesta\u00F1a de visualizaci\u00F3n
-module.url          = URL
-module.wiki         = Wiki
-module.workshop     = Taller
+module.assign          = Tarea
+module.book            = Libro
+module.category        = Categor\u00EDa
+module.chat            = Chat
+module.choice          = Consulta
+module.data            = Base de datos
+module.feedback        = Encuesta
+module.folder          = Carpeta
+module.forum           = Foro
+module.glossary        = Glosario
+module.guiadocente     = Gu\u00EDa docente
+module.imscp           = Paquete de contenido IMS
+module.kalvidassign    = Kaltura Media Assignment
+module.kalvidres       = Kaltura Video Resource
+module.label           = Etiqueta
+module.lesson          = Lecci\u00F3n
+module.lti             = Herramienta externa
+module.manual          = \u00CDtem manual
+module.module          = No disponible
+module.page            = P\u00E1gina
+module.quiz            = Cuestionario
+module.resource        = Archivo
+module.scorm           = Paquete SCORM
+module.survey          = Encuestas predefinidas
+module.tab             = Pesta\u00F1a de visualizaci\u00F3n
+module.turnitintooltwo = Turnintin 2
+module.url             = URL
+module.wiki            = Wiki
+module.workshop        = Taller
 
 moreMax = M\u00E1ximo
 
