--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -803,34 +803,35 @@ message.export_csv_success    = Esportazione CSV con successo. Esaminare i file 
 message.export_png            = Esportazione PNG con successo. Esaminare i file nella directory: 
 message.exportdir             = Esportazione con successo. Esaminare i file nella directory: 
 
-module.assign       = assegnazione
-module.book         = Libro
-module.category     = Categoria
-module.chat         = Chiacchierare
-module.choice       = Scelta
-module.data         = Banca dati
-module.feedback     = Risposta
-module.folder       = Cartella
-module.forum        = Forum
-module.glossary     = Glossario
-module.guiadocente  = Teaching guide
-module.imscp        = Pacchetto di contenuti IMS
-module.kalvidassign = Kaltura Media Assignment
-module.kalvidres    = Kaltura Video Resource
-module.label        = Etichetta
-module.lesson       = Lezione
-module.lti          = Strumento esterno
-module.manual       = Articolo manuale
-module.module       = Not avaible
-module.page         = Pagina
-module.quiz         = Quiz
-module.resource     = File
-module.scorm        = Pacchetto SCORM
-module.survey       = Sondaggio
-module.tab          = Tab display
-module.url          = URL
-module.wiki         = wiki
-module.workshop     = laboratorio
+module.assign          = assegnazione
+module.book            = Libro
+module.category        = Categoria
+module.chat            = Chiacchierare
+module.choice          = Scelta
+module.data            = Banca dati
+module.feedback        = Risposta
+module.folder          = Cartella
+module.forum           = Forum
+module.glossary        = Glossario
+module.guiadocente     = Teaching guide
+module.imscp           = Pacchetto di contenuti IMS
+module.kalvidassign    = Kaltura Media Assignment
+module.kalvidres       = Kaltura Video Resource
+module.label           = Etichetta
+module.lesson          = Lezione
+module.lti             = Strumento esterno
+module.manual          = Articolo manuale
+module.module          = Not avaible
+module.page            = Pagina
+module.quiz            = Quiz
+module.resource        = File
+module.scorm           = Pacchetto SCORM
+module.survey          = Sondaggio
+module.tab             = Tab display
+module.turnitintooltwo = Turnintin 2
+module.url             = URL
+module.wiki            = wiki
+module.workshop        = laboratorio
 
 moreMax = Massimo
 
