--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -803,34 +803,35 @@ message.export_csv_success    = Exportaci\u00F3 CSV amb \u00E8xit. Revisi els fi
 message.export_png            = Exportaci\u00F3 PNG amb \u00E8xit. Revisi els fitxers: 
 message.exportdir             = Exportaci\u00F3 amb \u00E8xit. Revisi el fitxer del directori: 
 
-module.assign       = Assignaci\u00F3
-module.book         = Llibre
-module.category     = Categoria
-module.chat         = Xat
-module.choice       = Elecci\u00F3
-module.data         = Base de dades
-module.feedback     = Feedback
-module.folder       = Carpeta
-module.forum        = F\u00F2rum
-module.glossary     = Glossari
-module.guiadocente  = Teaching guide
-module.imscp        = Paquet de contingut IMS
-module.kalvidassign = Kaltura Media Assignment
-module.kalvidres    = Kaltura Video Resource
-module.label        = Etiqueta
-module.lesson       = Lli\u00E7\u00F3
-module.lti          = Eina externa
-module.manual       = Element manual
-module.module       = Not avaible
-module.page         = P\u00E0gina
-module.quiz         = Q\u00FCestionari
-module.resource     = Dossier
-module.scorm        = Paquet SCORM
-module.survey       = Enquesta
-module.tab          = Visualitzaci\u00F3 de pestanya
-module.url          = URL
-module.wiki         = Wiki
-module.workshop     = Taller
+module.assign          = Assignaci\u00F3
+module.book            = Llibre
+module.category        = Categoria
+module.chat            = Xat
+module.choice          = Elecci\u00F3
+module.data            = Base de dades
+module.feedback        = Feedback
+module.folder          = Carpeta
+module.forum           = F\u00F2rum
+module.glossary        = Glossari
+module.guiadocente     = Teaching guide
+module.imscp           = Paquet de contingut IMS
+module.kalvidassign    = Kaltura Media Assignment
+module.kalvidres       = Kaltura Video Resource
+module.label           = Etiqueta
+module.lesson          = Lli\u00E7\u00F3
+module.lti             = Eina externa
+module.manual          = Element manual
+module.module          = Not avaible
+module.page            = P\u00E0gina
+module.quiz            = Q\u00FCestionari
+module.resource        = Dossier
+module.scorm           = Paquet SCORM
+module.survey          = Enquesta
+module.tab             = Visualitzaci\u00F3 de pestanya
+module.turnitintooltwo = Turnintin 2
+module.url             = URL
+module.wiki            = Wiki
+module.workshop        = Taller
 
 moreMax = M\u00E0xim
 
