--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -803,34 +803,35 @@ message.export_csv_success    = CSV-Export erfolgreich. \u00DCberpr\u00FCfen Sie
 message.export_png            = PNG-Export erfolgreich. \u00DCberpr\u00FCfen Sie die Dateien im Verzeichnis: 
 message.exportdir             = Export erfolgreich. \u00DCberpr\u00FCfen Sie die Dateien im Verzeichnis: 
 
-module.assign       = Zuordnung
-module.book         = Buch
-module.category     = Kategorie
-module.chat         = Plaudern
-module.choice       = Wahl
-module.data         = Datenbank
-module.feedback     = Feedback
-module.folder       = Mappe
-module.forum        = Forum
-module.glossary     = Glossar
-module.guiadocente  = Teaching guide
-module.imscp        = IMS-Inhaltspaket
-module.kalvidassign = Kaltura Media Assignment
-module.kalvidres    = Kaltura Video Resource
-module.label        = Etikette
-module.lesson       = Lektion
-module.lti          = Externes Werkzeug
-module.manual       = Manueller Artikel
-module.module       = Not avaible
-module.page         = Seite
-module.quiz         = Quiz
-module.resource     = Datei
-module.scorm        = SCORM-Paket
-module.survey       = Umfrage
-module.tab          = Tab-Anzeige
-module.url          = URL
-module.wiki         = Wiki
-module.workshop     = Werkstatt
+module.assign          = Zuordnung
+module.book            = Buch
+module.category        = Kategorie
+module.chat            = Plaudern
+module.choice          = Wahl
+module.data            = Datenbank
+module.feedback        = Feedback
+module.folder          = Mappe
+module.forum           = Forum
+module.glossary        = Glossar
+module.guiadocente     = Teaching guide
+module.imscp           = IMS-Inhaltspaket
+module.kalvidassign    = Kaltura Media Assignment
+module.kalvidres       = Kaltura Video Resource
+module.label           = Etikette
+module.lesson          = Lektion
+module.lti             = Externes Werkzeug
+module.manual          = Manueller Artikel
+module.module          = Not avaible
+module.page            = Seite
+module.quiz            = Quiz
+module.resource        = Datei
+module.scorm           = SCORM-Paket
+module.survey          = Umfrage
+module.tab             = Tab-Anzeige
+module.turnitintooltwo = Turnintin 2
+module.url             = URL
+module.wiki            = Wiki
+module.workshop        = Werkstatt
 
 moreMax = Maximal
 
