Mejorar el clustering jerárquico #95

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -136,7 +136,7 @@ clustering.error.lessUsersThanClusters   = Fewer selected users than clusters
 clustering.error.notData                 = No data selected
 clustering.error.notUsers                = No users selected
 clustering.error.parameter               = Invalid field [{0}] ({1}), must be greater than {2}.
-clustering.execute                       = Execute
+clustering.execute                       = Run
 clustering.exportGrades                  = Export grades
 clustering.filter                        = Filter data
 clustering.fullname                      = Name
