Añadido javadoc e internacionalización #94

--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -130,7 +130,9 @@ clustering.distance.chebyshev_distance   = Chebyshov
 clustering.distance.earthmovers_distance = Mov. de Tierra
 clustering.distance.euclidean_distance   = Euclidiana
 clustering.distance.manhattan_distance   = Manhattan
+clustering.distance.tooltip              = Medida de distancia entre puntos
 clustering.eps                           = Radio m\u00E1x. de vecindad
+clustering.eps.tooltip                   = El radio de vecindad respecto a un punto
 clustering.error.invalidDimension        = N\u00FAmero de reducci\u00F3n de dimensiones invalido.
 clustering.error.lessUsersThanClusters   = Menos usuarios seleccionados que agrupaciones
 clustering.error.notData                 = No hay datos seleccionados
@@ -141,19 +143,30 @@ clustering.exportGrades                  = Exportar calificaciones
 clustering.filter                        = Filtrar datos
 clustering.fullname                      = Nombre
 clustering.fuzziness                     = Factor de borrosidad
+clustering.fuzziness.tooltip             = El nivel de borrosidad del agrupaciones, con valores m\u00E1s elevados implica agrupaciones m\u00E1s borrosos
 clustering.hierarchical                  = Jer\u00E1rquico
 clustering.invalid                       = Algoritmo de agrupamiento invalido.\r\nNo tiene el par\u00E1metro de n\u00FAmero de agrupaciones.
 clustering.item                          = Elemento
 clustering.iterations                    = Iteraciones
 clustering.label                         = Etiquetar
+clustering.linkage.average               = Average linkage
+clustering.linkage.centroid              = Centroid linkage
+clustering.linkage.complete              = Complete linkage
+clustering.linkage.single                = Single linkage
+clustering.linkage.ward                  = Ward's linkage
 clustering.logTypes                      = Tipos
 clustering.manageLabels                  = Gestionar etiquetas
 clustering.maxIterations                 = M\u00E1x. n\u00BA de iteraciones
+clustering.maxIterations.tooltip         = M\u00E1ximo numero de iteraciones
 clustering.maxNumberOfClusters           = N\u00BA m\u00E1x. de agrupaciones
+clustering.maxNumberOfClusters.tooltip   = N\u00FAmero m\u00E1ximo de agrupaciones
 clustering.minPts                        = M\u00EDn. de puntos por agrupaci\u00F3n
+clustering.minPts.tooltip                = M\u00EDnimo numero de puntos por agrupaci\u00F3n
 clustering.noLabels                      = No se han creado etiquetas
 clustering.numTrials                     = N\u00FAmero de intentos
+clustering.numTrials.tooltip             = N\u00FAmero de intentos del algoritmo K-Means
 clustering.numberOfClusters              = N\u00BA de agrupaciones
+clustering.numberOfClusters.tooltip      = N\u00FAmero de agrupaciones
 clustering.reduce                        = Reducir dimensi\u00F3n
 clustering.removeLabels                  = Borrar seleccionados
 clustering.silhouetteAnalysis            = An\u00E1lisis de silueta
