--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -130,7 +130,9 @@ clustering.distance.chebyshev_distance   = Chebyshev
 clustering.distance.earthmovers_distance = Earth mover's
 clustering.distance.euclidean_distance   = Euclidean
 clustering.distance.manhattan_distance   = Manhattan
+clustering.distance.tooltip              = Distance measurement between points
 clustering.eps                           = Max. radius of the neighborhood
+clustering.eps.tooltip                   = The radius of neighbourhood to a point
 clustering.error.invalidDimension        = Invalid dimension reduction number.
 clustering.error.lessUsersThanClusters   = Fewer selected users than clusters
 clustering.error.notData                 = No data selected
@@ -141,19 +143,30 @@ clustering.exportGrades                  = Export grades
 clustering.filter                        = Filter data
 clustering.fullname                      = Name
 clustering.fuzziness                     = Fuzziness factor
+clustering.fuzziness.tooltip             = The level of blurring of the cluster, with higher values implies more blurred clusters
 clustering.hierarchical                  = Hierarchical
 clustering.invalid                       = Invalid clutering algorithm.\r\nIt doesn't have the cluster number parameter.
 clustering.item                          = Item
 clustering.iterations                    = Iterations
 clustering.label                         = Label
+clustering.linkage.average               = Average linkage
+clustering.linkage.centroid              = Centroid linkage
+clustering.linkage.complete              = Complete linkage
+clustering.linkage.single                = Single linkage
+clustering.linkage.ward                  = Ward's linkage
 clustering.logTypes                      = Types
 clustering.manageLabels                  = Manage labels
 clustering.maxIterations                 = Max n\u00BA of iterations
+clustering.maxIterations.tooltip         = Maximun number of iterations
 clustering.maxNumberOfClusters           = N\u00BA max. of clusters
+clustering.maxNumberOfClusters.tooltip   = Maximun number of clusters
 clustering.minPts                        = Min. points per cluster
+clustering.minPts.tooltip                = Minimum number of points per cluster
 clustering.noLabels                      = No labels have been created
 clustering.numTrials                     = Number of trial
+clustering.numTrials.tooltip             = Number of attempts of the K-Means algorithm
 clustering.numberOfClusters              = N\u00BA of clusters
+clustering.numberOfClusters.tooltip      = Number of clusters
 clustering.reduce                        = Reduce dimension
 clustering.removeLabels                  = Delete selected
 clustering.silhouetteAnalysis            = Silhouette analysis
