Modificado el clustering jerárquico #96

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -131,6 +131,7 @@ clustering.distance.earthmovers_distance = Earth mover's
 clustering.distance.euclidean_distance   = Euclidean
 clustering.distance.manhattan_distance   = Manhattan
 clustering.distance.tooltip              = Distance measurement between points
+clustering.distanceClusters              = Distance between clusters 
 clustering.eps                           = Max. radius of the neighborhood
 clustering.eps.tooltip                   = The radius of neighbourhood to a point
 clustering.error.invalidDimension        = Invalid dimension reduction number.
@@ -156,16 +157,16 @@ clustering.linkage.single                = Single linkage
 clustering.linkage.ward                  = Ward's linkage
 clustering.logTypes                      = Types
 clustering.manageLabels                  = Manage labels
-clustering.maxIterations                 = Max n\u00BA of iterations
+clustering.maxIterations                 = Max. number of iterations
 clustering.maxIterations.tooltip         = Maximun number of iterations
-clustering.maxNumberOfClusters           = N\u00BA max. of clusters
+clustering.maxNumberOfClusters           = Max. number of clusters
 clustering.maxNumberOfClusters.tooltip   = Maximun number of clusters
 clustering.minPts                        = Min. points per cluster
 clustering.minPts.tooltip                = Minimum number of points per cluster
 clustering.noLabels                      = No labels have been created
 clustering.numTrials                     = Number of trial
 clustering.numTrials.tooltip             = Number of attempts of the K-Means algorithm
-clustering.numberOfClusters              = N\u00BA of clusters
+clustering.numberOfClusters              = Number of clusters
 clustering.numberOfClusters.tooltip      = Number of clusters
 clustering.reduce                        = Reduce dimension
 clustering.removeLabels                  = Delete selected
