--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -131,6 +131,7 @@ clustering.distance.earthmovers_distance = Mov. de Tierra
 clustering.distance.euclidean_distance   = Euclidiana
 clustering.distance.manhattan_distance   = Manhattan
 clustering.distance.tooltip              = Medida de distancia entre puntos
+clustering.distanceClusters              = Distancia entre agrupaciones
 clustering.eps                           = Radio m\u00E1x. de vecindad
 clustering.eps.tooltip                   = El radio de vecindad respecto a un punto
 clustering.error.invalidDimension        = N\u00FAmero de reducci\u00F3n de dimensiones invalido.
