Modificado el jerárquico #96

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -173,7 +173,7 @@ clustering.removeLabels                  = Delete selected
 clustering.silhouetteAnalysis            = Silhouette analysis
 clustering.silhouetteWidth               = Silhouette Width
 clustering.smooth                        = Smooth
-clustering.standard                      = Standard
+clustering.standard                      = Partitional
 clustering.table                         = Data table
 clustering.tol                           = Tolerance
 clustering.type                          = Type
