--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -173,7 +173,7 @@ clustering.removeLabels                  = Borrar seleccionados
 clustering.silhouetteAnalysis            = An\u00E1lisis de silueta
 clustering.silhouetteWidth               = Ancho de silueta
 clustering.smooth                        = Smooth
-clustering.standard                      = Normal
+clustering.standard                      = Particional
 clustering.table                         = Tabla de datos
 clustering.tol                           = Tolerancia
 clustering.type                          = Tipo
