Partial refactoring web service

--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -81,9 +81,8 @@ SCATTER_USER = Dispersi\u00F3n de usuarios
 
 SESSION = Sesi\u00F3n
 
-SESSION.timeInterval = Intervalo maximo de minutos
-SESSION.xAxisTitle   = {0}
-SESSION.yAxisTitle   = Minutos (l\u00EDmite intervalo: {0})
+SESSION.xAxisTitle = {0}
+SESSION.yAxisTitle = Minutos (l\u00EDmite intervalo: {0})
 
 STACKED_BAR = Barras Apiladas
 
@@ -912,6 +911,8 @@ text.total               = Total
 text.wantonlinemode      = \u00BFQuieres entrar en modo con conexi\u00F3n?
 
 thirdInterval = Tercer intervalo
+
+timeInterval = Intervalo maximo de minutos
 
 title.passwordChanged   = Contrase\u00F1a modificada
 title.passwordIncorrect = Contrase\u00F1a incorrecta
