--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -81,9 +81,8 @@ SCATTER_USER = Users scatter
 
 SESSION = Session
 
-SESSION.timeInterval = Maximum minute interval
-SESSION.xAxisTitle   = {0}
-SESSION.yAxisTitle   = Minutes (interval limit: {0})
+SESSION.xAxisTitle = {0}
+SESSION.yAxisTitle = Minutes (interval limit: {0})
 
 STACKED_BAR = Bar Empil\u00E9e
 
@@ -912,6 +911,8 @@ text.total               = Total
 text.wantonlinemode      = Do you want to enter in online mode?
 
 thirdInterval = Troisi\u00E8me intervalle
+
+timeInterval = Maximum minute interval
 
 title.passwordChanged   = Le mot de passe a \u00E9t\u00E9 chang\u00E9
 title.passwordIncorrect = Mot de passe incorrect
