--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -81,9 +81,8 @@ SCATTER_USER = Users scatter
 
 SESSION = Session
 
-SESSION.timeInterval = Maximum minute interval
-SESSION.xAxisTitle   = {0}
-SESSION.yAxisTitle   = Minutes (interval limit: {0})
+SESSION.xAxisTitle = {0}
+SESSION.yAxisTitle = Minutes (interval limit: {0})
 
 STACKED_BAR = Barres Apilades
 
@@ -912,6 +911,8 @@ text.total               = Total
 text.wantonlinemode      = Do you want to enter in online mode?
 
 thirdInterval = Tercer interval
+
+timeInterval = Maximum minute interval
 
 title.passwordChanged   = S'ha canviat la contrasenya
 title.passwordIncorrect = Contrasenya incorrecta
