--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -81,9 +81,8 @@ SCATTER_USER = Users scatter
 
 SESSION = Session
 
-SESSION.timeInterval = Maximum minute interval
-SESSION.xAxisTitle   = {0}
-SESSION.yAxisTitle   = Minutes (interval limit: {0})
+SESSION.xAxisTitle = {0}
+SESSION.yAxisTitle = Minutes (interval limit: {0})
 
 STACKED_BAR = Bar Empilhados
 
@@ -912,6 +911,8 @@ text.total               = Total
 text.wantonlinemode      = Do you want to enter in online mode?
 
 thirdInterval = terceiro intervalo
+
+timeInterval = Maximum minute interval
 
 title.passwordChanged   = Senha foi alterada
 title.passwordIncorrect = Senha incorreta
