--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -150,11 +150,11 @@ clustering.invalid                       = Algoritmo de agrupamiento invalido.\r
 clustering.item                          = Elemento
 clustering.iterations                    = Iteraciones
 clustering.label                         = Etiquetar
-clustering.linkage.average               = Average linkage
-clustering.linkage.centroid              = Centroid linkage
-clustering.linkage.complete              = Complete linkage
-clustering.linkage.single                = Single linkage
-clustering.linkage.ward                  = Ward's linkage
+clustering.linkage.average               = Conexi\u00F3n media
+clustering.linkage.centroid              = Conexi\u00F3n entre centroides
+clustering.linkage.complete              = Conexi\u00F3n completa
+clustering.linkage.single                = Conexi\u00F3n simple
+clustering.linkage.ward                  = Conexi\u00F3n Ward
 clustering.logTypes                      = Tipos
 clustering.manageLabels                  = Gestionar etiquetas
 clustering.maxIterations                 = M\u00E1x. n\u00BA de iteraciones
